# merged-reforged_LegionCore-7.3.5

./: BUILD_WINDOWS.md  CHANGELOG.txt  CMakeLists.txt  CMakePresets.json  LEGION_README.txt  README.md
Dev_referance/: CHANGELOG.txt  DEVELOPMENT_API_REFERENCE.md  LEGION_README.txt  README.md  RECOMMENDATIONS.md
Dev_referance/Scripts/: custom_player_script.cpp  custom_script_loader.cpp  npc_ambient_world.cpp
Dev_referance/Scripts/Bots/: CustomTalkMenu.cpp  _Bot.cpp  _Bot.h  _BotScript.cpp
Dev_referance/_translation_workspace/: README.md  worldserver.conf.dist.english
Merged-LegionCore-Reforged/: README.md
Merged-LegionCore-Reforged/dep/boost/: CMakeLists.txt
Merged-LegionCore-Reforged/sql/custom/: gameobject_displayid_fix.sql
_translation_workspace/: worldserver.conf.dist.original-french
cmake/compiler/msvc/: settings.cmake
cmake/macros/: FindMySQL.cmake
cmake/platform/win/: settings.cmake
compile_deps/: .gitignore  DEPENDENCIES.md  README.md  setup_deps.ps1  setup_deps.sh
compile_deps/cmake/: LegionCoreDeps.cmake
compile_deps/downloads/: mariadb-sha256sums.txt
dep/boost/: CMakeLists.txt
docs/: BUILD_WINDOWS.md  DEPENDENCY_SETUP.md  PORTABLE_SERVER_SETUP.md  README.md  setup_guide.md
sql/: fix_dberrors.sql  fix_legion_assault_bonus_objectives.sql
sql/custom/: battlepay_character_boost.sql  battlepay_deleted_character.sql  battlepay_shop_fill.sql
sql/custom/dberrors_cleanup/: 07_loot_tables.sql  09_skill_discovery.sql  12_db_script_string.sql  dberrors_cleanup_all.sql
sql/custom/locales_frFR/: creature_ids.txt  creature_template_wdb_locale_frFR.sql
sql/updates/hotfixes/: 2026_03_02_00_character_service_info.sql  2026_03_02_01_character_service_info_hotfixes.sql  2026_03_03_02_spell_171950_missile_speed.sql
sql/updates/world/: 2026_02_22_00_brawlers_guild_queue_scriptname.sql  2026_02_22_01_brawlers_guild_missing_scriptnames.sql  2026_03_02_03_boost109_shop_entry.sql  2026_03_02_05_fix_npc_76886_76189_instant_death.sql  2026_03_03_02_fix_creature_84199_inanimate.sql  2026_03_03_04_iron_demolisher_82273_random_cannon.sql  2026_03_03_05_iron_demolisher_82273_fixed_cannon_pos.sql  2026_03_03_07_iron_demolisher_82273_cannon_75y.sql  2026_03_03_08_iron_demolisher_82273_anim_and_75y.sql  2026_03_05_03_iron_demolisher_82273_fix_animations.sql  2026_03_06_02_fix_ironmarch_movementtype_no_waypoints.sql  2026_03_06_02_iron_demolisher_82273_cpp_script.sql  2026_03_06_11_npc_78883_faction.sql  2026_03_07_04_go_marks_stasis_scriptname.sql  2026_03_07_06_spell_area_163341_remove.sql  2026_03_07_08_phase_definitions_zone6662_remove.sql  2026_03_08_02_conditions_zone7025_cleanup.sql  demon_invasion_azshara_spawns.sql  demon_invasion_creatures.sql  rukhmar_waypoint_path.sql  (+1 more)
src/server/proto/: CMakeLists.txt
src/server/proto/PrecompiledHeaders/: protoPCH.h
(+269 files in other folders)
